6-cloudformation.json
{
  "Mappings": {
    "AWSNATAMI": {
      "us-west-2": {
        "AMI": "ami-f032acc0"
      },
      "us-west-1": {
        "AMI": "ami-d69aad93"
      },
      "us-east-1": {
        "AMI": "ami-ad227cc4"
      },
      "sa-east-1": {
        "AMI": "ami-d78325ca"
      },
      "eu-west-1": {
        "AMI": "ami-f3e30084"
      },
      "ap-southeast-2": {
        "AMI": "ami-3bae3201"
      },
      "ap-southeast-1": {
        "AMI": "ami-f22772a0"
      },
      "ap-northeast-1": {
        "AMI": "ami-cd43d9cc"
      }
    }
  },
  "Resources": {
    "OpenSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "SecurityGroupIngress": [
          {
            "ToPort": "65535",
            "IpProtocol": "tcp",
            "FromPort": "0",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "ToPort": "65535",
            "IpProtocol": "udp",
            "FromPort": "0",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "SecurityGroupEgress": [],
        "GroupDescription": "Open"
      }
    },
    "CFZ2SubnetRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "InstanceId": {
          "Ref": "NATZ2NATInstance"
        },
        "RouteTableId": {
          "Ref": "CFZ2SubnetRouteTable"
        },
        "DestinationCidrBlock": "0.0.0.0/0"
      },
      "DependsOn": "VPCInternetGateway"
    },
    "CFELBZ1SubnetRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "CFELBZ1SubnetRouteTable"
        },
        "GatewayId": {
          "Ref": "VPCGatewayInternetGateway"
        },
        "DestinationCidrBlock": "0.0.0.0/0"
      },
      "DependsOn": "VPCInternetGateway"
    },
    "CFELBZ1SubnetRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        }
      }
    },
    "BOSHZ1SubnetRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "BOSHZ1Subnet"
        },
        "RouteTableId": {
          "Ref": "BOSHZ1SubnetRouteTable"
        }
      }
    },
    "CFZ2SubnetRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "CFZ2Subnet"
        },
        "RouteTableId": {
          "Ref": "CFZ2SubnetRouteTable"
        }
      }
    },
    "CFELBZ2SubnetRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "CFELBZ2Subnet"
        },
        "RouteTableId": {
          "Ref": "CFELBZ2SubnetRouteTable"
        }
      }
    },
    "BOSHZ2SubnetRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "BOSHZ2SubnetRouteTable"
        },
        "GatewayId": {
          "Ref": "VPCGatewayInternetGateway"
        },
        "DestinationCidrBlock": "0.0.0.0/0"
      },
      "DependsOn": "VPCInternetGateway"
    },
    "BOSHZ2Subnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "Tags": [
          {
            "Value": "BOSHZ2",
            "Key": "Name"
          }
        ],
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": "10.11.64.0/24",
        "AvailabilityZone": "us-east-1a"
      }
    },
    "CFZ1SubnetRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "CFZ1Subnet"
        },
        "RouteTableId": {
          "Ref": "CFZ1SubnetRouteTable"
        }
      }
    },
    "CFELBZ1SubnetRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "CFELBZ1Subnet"
        },
        "RouteTableId": {
          "Ref": "CFELBZ1SubnetRouteTable"
        }
      }
    },
    "VPCDHCPOptionsAssociation": {
      "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
      "Properties": {
        "DhcpOptionsId": {
          "Ref": "DHCPOptions"
        },
        "VpcId": {
          "Ref": "VPC"
        }
      }
    },
    "NATZ1NATInstance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "Tags": [
          {
            "Value": "NATZ1",
            "Key": "Name"
          }
        ],
        "AvailabilityZone": "us-east-1a",
        "ImageId": {
          "Fn::FindInMap": [
            "AWSNATAMI",
            {
              "Ref": "AWS::Region"
            },
            "AMI"
          ]
        },
        "InstanceType": "m1.small",
        "KeyName": "bosh",
        "PrivateIpAddress": "10.11.0.10",
        "SecurityGroupIds": [
          {
            "Ref": "OpenSecurityGroup"
          }
        ],
        "SourceDestCheck": false,
        "SubnetId": {
          "Ref": "BOSHZ1Subnet"
        }
      }
    },
    "CFZ1SubnetRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        }
      }
    },
    "BOSHZ2SubnetRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        }
      }
    },
    "NATZ2NATInstance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "Tags": [
          {
            "Value": "NATZ2",
            "Key": "Name"
          }
        ],
        "AvailabilityZone": "us-east-1a",
        "ImageId": {
          "Fn::FindInMap": [
            "AWSNATAMI",
            {
              "Ref": "AWS::Region"
            },
            "AMI"
          ]
        },
        "InstanceType": "m1.small",
        "KeyName": "bosh",
        "PrivateIpAddress": "10.11.64.10",
        "SecurityGroupIds": [
          {
            "Ref": "OpenSecurityGroup"
          }
        ],
        "SourceDestCheck": false,
        "SubnetId": {
          "Ref": "BOSHZ2Subnet"
        }
      }
    },
    "CFZ2Subnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "Tags": [
          {
            "Value": "CFZ2",
            "Key": "Name"
          }
        ],
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": "10.11.80.0/20",
        "AvailabilityZone": "us-east-1b"
      }
    },
    "CFELBZ2SubnetRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        }
      }
    },
    "CFZ2SubnetRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        }
      }
    },
    "DHCPOptions": {
      "Type": "AWS::EC2::DHCPOptions",
      "Properties": {
        "DomainNameServers": [
          "10.11.0.2",
          "10.11.0.6"
        ]
      }
    },
    "CFELBZ2SubnetRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "CFELBZ2SubnetRouteTable"
        },
        "GatewayId": {
          "Ref": "VPCGatewayInternetGateway"
        },
        "DestinationCidrBlock": "0.0.0.0/0"
      },
      "DependsOn": "VPCInternetGateway"
    },
    "InternalSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "SecurityGroupIngress": [
          {
            "ToPort": "65535",
            "IpProtocol": "tcp",
            "FromPort": "0",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "ToPort": "65535",
            "IpProtocol": "udp",
            "FromPort": "0",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "SecurityGroupEgress": [],
        "GroupDescription": "Internal"
      }
    },
    "CFZ1Subnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "Tags": [
          {
            "Value": "CFZ1",
            "Key": "Name"
          }
        ],
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": "10.11.16.0/20",
        "AvailabilityZone": "us-east-1a"
      }
    },
    "BOSHZ2SubnetRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "BOSHZ2Subnet"
        },
        "RouteTableId": {
          "Ref": "BOSHZ2SubnetRouteTable"
        }
      }
    },
    "NATZ2EIP": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "InstanceId": {
          "Ref": "NATZ2NATInstance"
        },
        "Domain": "vpc"
      },
      "DependsOn": "VPCInternetGateway"
    },
    "VPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.11.0.0/16"
      }
    },
    "VPCInternetGateway": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "InternetGatewayId": {
          "Ref": "VPCGatewayInternetGateway"
        }
      }
    },
    "BOSHZ1Subnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "Tags": [
          {
            "Value": "BOSHZ1",
            "Key": "Name"
          }
        ],
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": "10.11.0.0/24",
        "AvailabilityZone": "us-east-1a"
      }
    },
    "WebSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "SecurityGroupIngress": [
          {
            "ToPort": "80",
            "IpProtocol": "tcp",
            "FromPort": "80",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "ToPort": "8080",
            "IpProtocol": "tcp",
            "FromPort": "8080",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "ToPort": "443",
            "IpProtocol": "tcp",
            "FromPort": "443",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "ToPort": "4443",
            "IpProtocol": "tcp",
            "FromPort": "4443",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "SecurityGroupEgress": [],
        "GroupDescription": "Web"
      }
    },
    "CFELBLoadBalancer": {
      "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
      "Properties": {
        "Listeners": [
          {
            "InstanceProtocol": "tcp",
            "Protocol": "tcp",
            "LoadBalancerPort": "80",
            "InstancePort": "80"
          },
          {
            "InstanceProtocol": "tcp",
            "Protocol": "tcp",
            "LoadBalancerPort": "8080",
            "InstancePort": "8080"
          }
        ],
        "SecurityGroups": [
          {
            "Ref": "WebSecurityGroup"
          }
        ],
        "HealthCheck": {
          "UnhealthyThreshold": "2",
          "Timeout": "5",
          "Target": "tcp:80",
          "Interval": "30",
          "HealthyThreshold": "10"
        },
        "Subnets": [
          {
            "Ref": "CFELBZ1Subnet"
          },
          {
            "Ref": "CFELBZ2Subnet"
          }
        ]
      }
    },
    "VPCGatewayInternetGateway": {
      "Type": "AWS::EC2::InternetGateway"
    },
    "BOSHZ1SubnetRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "BOSHZ1SubnetRouteTable"
        },
        "GatewayId": {
          "Ref": "VPCGatewayInternetGateway"
        },
        "DestinationCidrBlock": "0.0.0.0/0"
      },
      "DependsOn": "VPCInternetGateway"
    },
    "NATZ1EIP": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "InstanceId": {
          "Ref": "NATZ1NATInstance"
        },
        "Domain": "vpc"
      },
      "DependsOn": "VPCInternetGateway"
    },
    "CFELBZ2Subnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "Tags": [
          {
            "Value": "CFELBZ2",
            "Key": "Name"
          }
        ],
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": "10.11.66.0/24",
        "AvailabilityZone": "us-east-1b"
      }
    },
    "BOSHZ1SubnetRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        }
      }
    },
    "CFELBZ1Subnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "Tags": [
          {
            "Value": "CFELBZ1",
            "Key": "Name"
          }
        ],
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": "10.11.2.0/24",
        "AvailabilityZone": "us-east-1a"
      }
    }
  },
  "Description": "lol",
  "AWSTemplateFormatVersion": "2010-09-09"
}
